cors.middleware.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: cors-middleware
spec:
  headers:
    accessControlAllowOriginList:
      - "http://localhost:3000"
      - "http://veljkoskrbic.com"
    accessControlAllowMethods:
      - "GET"
      - "POST"
      - "PUT"
      - "DELETE"
      - "OPTIONS"
    accessControlAllowHeaders:
      - "Content-Type"
      - "Authorization"
      - "X-Forwarded-Role"
      - "X-Forwarded-User"
    accessControlAllowCredentials: true
    accessControlExposeHeaders:
      - "X-Forwarded-Role"
      - "X-Forwarded-User"
    accessControlMaxAge: 100
    addVaryHeader: true
